--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,22 @@
     "/test/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.1.0"
+    "polymer": "Polymer/polymer#^1.1.0",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.4",
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#~1.0.12",
+    "paper-toolbar": "PolymerElements/paper-toolbar#~1.1.1",
+    "paper-menu": "PolymerElements/paper-menu#~1.2.0",
+    "iron-icon": "PolymerElements/iron-icon#~1.0.7",
+    "iron-icons": "PolymerElements/iron-icons#~1.0.5",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5",
+    "iron-pages": "PolymerElements/iron-pages#~1.0.4",
+    "paper-button": "PolymerElements/paper-button#~1.0.8",
+    "paper-tabs": "PolymerElements/paper-tabs#~1.1.0",
+    "paper-item": "PolymerElements/paper-item#~1.1.1",
+    "paper-styles": "PolymerElements/paper-styles#~1.0.13",
+    "iron-selector": "PolymerElements/iron-selector#~1.0.8",
+    "neon-animation": "PolymerElements/neon-animation#~1.0.8",
+    "neon-slideshow": "https://github.com/Zecat/neon-slideshow.git"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
