--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "backend-template",
-  "version": "1.0.3",
+  "version": "1.0.0",
   "authors": [
-    "Anonymous <anonymous@example.com>"
+    "Zecat <jullienfelix@gmail.com>"
   ],
-  "description": "An element providing a solution to no problem in particular.",
+  "description": ".",
   "keywords": [
     "web-component",
     "polymer",
@@ -32,17 +32,14 @@
     "paper-item": "PolymerElements/paper-item#~1.1.1",
     "paper-styles": "PolymerElements/paper-styles#~1.0.13",
     "iron-selector": "PolymerElements/iron-selector#~1.0.8",
-    "neon-animation": "PolymerElements/neon-animation#~1.0.8",
-    "neon-slideshow": "https://github.com/Zecat/neon-slideshow.git",
+    "neon-slideshow": "Zecat/neon-slideshow",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.2.1",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.1.1",
-    "iron-ajax": "PolymerElements/iron-ajax#~1.1.1",
-    "iron-list": "PolymerElements/iron-list#~1.1.6",
-    "dom-binder": "https://github.com/Zecat/dom-binder.git#master"
+    "neon-animation": "PolymerElements/neon-animation#~1.0.8"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "web-component-tester": "*",
-    "paper-item": "PolymerElements/paper-item#~1.1.2"
+    "paper-material": "PolymerElements/paper-material#~1.0.4"
   }
 }
